--- a/style.css
+++ b/style.css
@@ -620,6 +620,41 @@
     grid-row: span 2/span 2;
     grid-row-start: 5;
   }
+  .footer_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 36px;
+  }
+  .footer_container--box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 36px;
+  }
+  .footer_container--box--img {
+    padding-top: 80px;
+  }
+  .footer_container--box--nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 36px;
+  }
+  .footer_container--social {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 36px;
+  }
+  .footer #scrollTopBtn {
+    width: 104px;
+    height: 104px;
+    cursor: pointer;
+    position: absolute;
+    top: -52px;
+    left: 135px;
+  }
 }
 main .recommendation {
   width: 100%;
