--- a/_addaptive.scss
+++ b/_addaptive.scss
@@ -145,58 +145,62 @@
             &_container {
 
                 &--box {
-                    display: grid;
                     grid-template-columns: repeat(2, 1fr);
-                    grid-template-rows: repeat(6, 1fr);
-                    gap: 8px;
+                    gap: 30px;
 
                     &--img--1 {
-                        grid-row: span 3 / span 3;
+                        aspect-ratio: 151 / 217;
+                        grid-column: 1 / 2;
+                        grid-row: span 2;
                     }
 
                     &--img--2 {
-                        grid-column-start: 1;
-                        grid-row-start: 4;
+                        aspect-ratio: 151 / 86;
+                        grid-column: 2 / 3;
+                        grid-row: span 1;
                     }
 
                     &--img--3 {
-                        grid-row: span 2 / span 2;
-                        grid-column-start: 1;
-                        grid-row-start: 5;
+                        aspect-ratio: 150 / 153;
+                        grid-column: 2 / 3;
+                        grid-row: span 2;
                     }
 
                     &--img--4 {
-                        grid-column-start: 2;
-                        grid-row-start: 1;
+                        aspect-ratio: 151 / 217;
+                        grid-column: 1 / 2;
+                        grid-row: span 1;
                     }
 
                     &--img--5 {
-                        grid-row: span 3 / span 3;
-                        grid-column-start: 2;
-                        grid-row-start: 2;
+                        aspect-ratio: 151 / 86;
+                        grid-column: 1 / 2;
+                        grid-row: span 1;
                     }
 
                     &--img--6 {
-                        grid-row: span 2 / span 2;
-                        grid-row-start: 5;
-                    }
-                }
-            }
-        }
-
-        .videos {
-            &_container {
-                &--box {
-
-                    &--bottom {
-                        display: flex;
-                        flex-direction: column;
+                        aspect-ratio: 150 / 153;
+                        grid-column: 2 / 3;
+                        grid-row: span 1;
                     }
                 }
             }
         }
     }
+
+    .videos {
+        &_container {
+            &--box {
+
+                &--bottom {
+                    display: flex;
+                    flex-direction: column;
+                }
+            }
+        }
+    }
 }
+
 
 @media(max-width:1180px) {
     .header {
@@ -223,6 +227,49 @@
 
             &--container {
                 margin: 0 auto;
+            }
+        }
+    }
+
+    main {
+        .gallery_container--box {
+            grid-template-columns: repeat(2, 1fr);
+            gap: 30px;
+
+            &--img--1 {
+                aspect-ratio: 151 / 217;
+                grid-column: 1 / 2;
+                grid-row: span 2;
+            }
+
+            &--img--2 {
+                aspect-ratio: 151 / 86;
+                grid-column: 2 / 3;
+                grid-row: span 1;
+            }
+
+            &--img--3 {
+                aspect-ratio: 150 / 153;
+                grid-column: 2 / 3;
+                grid-row: span 2;
+            }
+
+            &--img--4 {
+                aspect-ratio: 151 / 217;
+                grid-column: 1 / 2;
+                grid-row: span 1;
+            }
+
+            &--img--5 {
+                aspect-ratio: 151 / 86;
+                grid-column: 1 / 2;
+                grid-row: span 1;
+            }
+
+            &--img--6 {
+                aspect-ratio: 150 / 153;
+                grid-column: 2 / 3;
+                grid-row: span 1;
             }
         }
     }
@@ -315,96 +362,97 @@
             }
         }
     }
+}
 
-    main {
-        .recommendation {
-            &_container {
+main {
+    .recommendation {
+        &_container {
 
-                &--top,
-                &--bottom {
-                    &--block {
-                        &--box {
-                            &--title {
-                                font-size: 40px;
-                                max-width: 314px;
-                                text-align: left;
-                            }
+            &--top,
+            &--bottom {
+                &--block {
+                    &--box {
+                        &--title {
+                            font-size: 40px;
+                            max-width: 314px;
+                            text-align: left;
+                        }
 
-                            &--text {
-                                font-size: 16px;
-                                max-width: 314px;
-                                text-align: left;
-                            }
+                        &--text {
+                            font-size: 16px;
+                            max-width: 314px;
+                            text-align: left;
+                        }
 
-                            &--btn {
-                                width: 314px;
-                            }
+                        &--btn {
+                            width: 314px;
                         }
                     }
-                }
-
-                &--bottom {
-                    &--block {
-                        display: flex;
-                        flex-direction: column-reverse;
-                    }
-
                 }
             }
-        }
 
-        .secrets {
-            &_numbers {
-                display: flex;
+            &--bottom {
+                &--block {
+                    display: flex;
+                    flex-direction: column-reverse;
+                }
+
+            }
+        }
+    }
+
+    .secrets {
+        &_numbers {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-bottom: 0;
+
+            &--title {
+                width: 314px;
+                font-family: DM Sans;
+                font-weight: 700;
+                font-size: 40px;
+                line-height: 46px;
+                letter-spacing: 0%;
+                text-align: center;
+                vertical-align: middle;
+            }
+
+            &--text {
+                width: 100%;
+                max-width: 314px;
+                font-family: DM Sans;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 24px;
+                letter-spacing: 0.5px;
+                text-align: center;
+            }
+
+            &--container {
                 flex-direction: column;
                 align-items: center;
-                padding-bottom: 0;
 
-                &--title {
-                    width: 314px;
-                    font-family: DM Sans;
-                    font-weight: 700;
-                    font-size: 40px;
-                    line-height: 46px;
-                    letter-spacing: 0%;
-                    text-align: center;
-                    vertical-align: middle;
-                }
-
-                &--text {
+                &--box,
+                &--box--2 {
+                    margin: 0 auto;
                     width: 100%;
                     max-width: 314px;
-                    font-family: DM Sans;
-                    font-weight: 400;
-                    font-size: 16px;
-                    line-height: 24px;
-                    letter-spacing: 0.5px;
-                    text-align: center;
                 }
 
-                &--container {
-                    flex-direction: column;
-                    align-items: center;
+                &--box {
+                    margin-bottom: 80px;
 
-                    &--box,
-                    &--box--2 {
-                        margin: 0 auto;
-                        width: 100%;
-                        max-width: 314px;
-                    }
-
-                    &--box {
-                        margin-bottom: 80px;
-
-                        &--2 {
-                            margin-bottom: 43px;
-                        }
+                    &--2 {
+                        margin-bottom: 43px;
                     }
                 }
             }
         }
     }
 }
+
 
 @media (max-width: 768px) {
     main {
@@ -491,47 +539,6 @@
 
                 &--next {
                     right: 12px;
-                }
-            }
-        }
-
-        .gallery {
-            &_container {
-                &--box {
-                    grid-template-columns: repeat(2, 1fr);
-
-                    gap: 8px;
-
-                    &--img--1 {
-                        grid-row: span 3 / span 3;
-                    }
-
-                    &--img--2 {
-                        grid-column-start: 1;
-                        grid-row-start: 4;
-                    }
-
-                    &--img--3 {
-                        grid-row: span 2 / span 2;
-                        grid-column-start: 1;
-                        grid-row-start: 5;
-                    }
-
-                    &--img--4 {
-                        grid-column-start: 2;
-                        grid-row-start: 1;
-                    }
-
-                    &--img--5 {
-                        grid-row: span 3 / span 3;
-                        grid-column-start: 2;
-                        grid-row-start: 2;
-                    }
-
-                    &--img--6 {
-                        grid-row: span 2 / span 2;
-                        grid-row-start: 5;
-                    }
                 }
             }
         }
