--- a/style.css
+++ b/style.css
@@ -358,37 +358,40 @@
     right: 0;
   }
   main .gallery_container--box {
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    gap: 8px;
+    gap: 30px;
   }
   main .gallery_container--box--img--1 {
-    grid-row: span 3/span 3;
+    aspect-ratio: 151/217;
+    grid-column: 1/2;
+    grid-row: span 2;
   }
   main .gallery_container--box--img--2 {
-    grid-column-start: 1;
-    grid-row-start: 4;
+    aspect-ratio: 151/86;
+    grid-column: 2/3;
+    grid-row: span 1;
   }
   main .gallery_container--box--img--3 {
-    grid-row: span 2/span 2;
-    grid-column-start: 1;
-    grid-row-start: 5;
+    aspect-ratio: 150/153;
+    grid-column: 2/3;
+    grid-row: span 2;
   }
   main .gallery_container--box--img--4 {
-    grid-column-start: 2;
-    grid-row-start: 1;
+    aspect-ratio: 151/217;
+    grid-column: 1/2;
+    grid-row: span 1;
   }
   main .gallery_container--box--img--5 {
-    grid-row: span 3/span 3;
-    grid-column-start: 2;
-    grid-row-start: 2;
+    aspect-ratio: 151/86;
+    grid-column: 1/2;
+    grid-row: span 1;
   }
   main .gallery_container--box--img--6 {
-    grid-row: span 2/span 2;
-    grid-row-start: 5;
+    aspect-ratio: 150/153;
+    grid-column: 2/3;
+    grid-row: span 1;
   }
-  main .videos_container--box--bottom {
+  .videos_container--box--bottom {
     display: flex;
     flex-direction: column;
   }
@@ -408,6 +411,40 @@
   }
   .header_bottom--container {
     margin: 0 auto;
+  }
+  main .gallery_container--box {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+  main .gallery_container--box--img--1 {
+    aspect-ratio: 151/217;
+    grid-column: 1/2;
+    grid-row: span 2;
+  }
+  main .gallery_container--box--img--2 {
+    aspect-ratio: 151/86;
+    grid-column: 2/3;
+    grid-row: span 1;
+  }
+  main .gallery_container--box--img--3 {
+    aspect-ratio: 150/153;
+    grid-column: 2/3;
+    grid-row: span 2;
+  }
+  main .gallery_container--box--img--4 {
+    aspect-ratio: 151/217;
+    grid-column: 1/2;
+    grid-row: span 1;
+  }
+  main .gallery_container--box--img--5 {
+    aspect-ratio: 151/86;
+    grid-column: 1/2;
+    grid-row: span 1;
+  }
+  main .gallery_container--box--img--6 {
+    aspect-ratio: 150/153;
+    grid-column: 2/3;
+    grid-row: span 1;
   }
 }
 @media (max-width: 850px) {
@@ -477,65 +514,66 @@
     top: 65px;
     left: 125px;
   }
-  main .recommendation_container--top--block--box--title, main .recommendation_container--bottom--block--box--title {
-    font-size: 40px;
-    max-width: 314px;
-    text-align: left;
-  }
-  main .recommendation_container--top--block--box--text, main .recommendation_container--bottom--block--box--text {
-    font-size: 16px;
-    max-width: 314px;
-    text-align: left;
-  }
-  main .recommendation_container--top--block--box--btn, main .recommendation_container--bottom--block--box--btn {
-    width: 314px;
-  }
-  main .recommendation_container--bottom--block {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-  main .secrets_numbers {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 0;
-  }
-  main .secrets_numbers--title {
-    width: 314px;
-    font-family: DM Sans;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 46px;
-    letter-spacing: 0%;
-    text-align: center;
-    vertical-align: middle;
-  }
-  main .secrets_numbers--text {
-    width: 100%;
-    max-width: 314px;
-    font-family: DM Sans;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.5px;
-    text-align: center;
-  }
-  main .secrets_numbers--container {
-    flex-direction: column;
-    align-items: center;
-  }
-  main .secrets_numbers--container--box, main .secrets_numbers--container--box--2 {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 314px;
-  }
-  main .secrets_numbers--container--box {
-    margin-bottom: 80px;
-  }
-  main .secrets_numbers--container--box--2 {
-    margin-bottom: 43px;
-  }
 }
+main .recommendation_container--top--block--box--title, main .recommendation_container--bottom--block--box--title {
+  font-size: 40px;
+  max-width: 314px;
+  text-align: left;
+}
+main .recommendation_container--top--block--box--text, main .recommendation_container--bottom--block--box--text {
+  font-size: 16px;
+  max-width: 314px;
+  text-align: left;
+}
+main .recommendation_container--top--block--box--btn, main .recommendation_container--bottom--block--box--btn {
+  width: 314px;
+}
+main .recommendation_container--bottom--block {
+  display: flex;
+  flex-direction: column-reverse;
+}
+main .secrets_numbers {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 0;
+}
+main .secrets_numbers--title {
+  width: 314px;
+  font-family: DM Sans;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 46px;
+  letter-spacing: 0%;
+  text-align: center;
+  vertical-align: middle;
+}
+main .secrets_numbers--text {
+  width: 100%;
+  max-width: 314px;
+  font-family: DM Sans;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+  text-align: center;
+}
+main .secrets_numbers--container {
+  flex-direction: column;
+  align-items: center;
+}
+main .secrets_numbers--container--box, main .secrets_numbers--container--box--2 {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 314px;
+}
+main .secrets_numbers--container--box {
+  margin-bottom: 80px;
+}
+main .secrets_numbers--container--box--2 {
+  margin-bottom: 43px;
+}
+
 @media (max-width: 768px) {
   main .videos_container--box--title {
     font-family: DM Sans;
@@ -590,35 +628,6 @@
   }
   main .secrets_slider--next {
     right: 12px;
-  }
-  main .gallery_container--box {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 8px;
-  }
-  main .gallery_container--box--img--1 {
-    grid-row: span 3/span 3;
-  }
-  main .gallery_container--box--img--2 {
-    grid-column-start: 1;
-    grid-row-start: 4;
-  }
-  main .gallery_container--box--img--3 {
-    grid-row: span 2/span 2;
-    grid-column-start: 1;
-    grid-row-start: 5;
-  }
-  main .gallery_container--box--img--4 {
-    grid-column-start: 2;
-    grid-row-start: 1;
-  }
-  main .gallery_container--box--img--5 {
-    grid-row: span 3/span 3;
-    grid-column-start: 2;
-    grid-row-start: 2;
-  }
-  main .gallery_container--box--img--6 {
-    grid-row: span 2/span 2;
-    grid-row-start: 5;
   }
   .footer_container {
     display: flex;
