--- a/_main.scss
+++ b/_main.scss
@@ -30,7 +30,7 @@ main {
                         width: 100%;
                         height: auto;
                         display: block;
-                        max-width: 630px;
+                        width: 630px;
                     }
 
                     &--box {
@@ -38,7 +38,6 @@ main {
                         max-width: 438px;
 
                         &--title {
-                            width: 100%;
                             font-family: DM Sans;
                             font-weight: 700;
                             font-size: 42px;
@@ -49,14 +48,13 @@ main {
                         }
 
                         &--text {
-                            width: 100%;
+                            width: 407px;
                             font-family: DM Sans;
                             font-weight: 400;
                             font-size: 18px;
                             line-height: 28px;
                             letter-spacing: 1%;
                             color: #E0E0E0;
-                            max-width: 407px;
                             margin-bottom: 32px;
                         }
 
@@ -98,7 +96,7 @@ main {
                         width: 100%;
                         height: auto;
                         display: block;
-                        max-width: 630px;
+                        width: 630px;
                     }
 
                     &--box {
@@ -107,7 +105,6 @@ main {
                         margin-left: 45px;
 
                         &--title {
-                            width: 100%;
                             font-family: DM Sans;
                             font-weight: 700;
                             font-size: 42px;
@@ -118,13 +115,13 @@ main {
                         }
 
                         &--text {
+                            width: 407px;
                             font-family: DM Sans;
                             font-weight: 400;
                             font-size: 18px;
                             line-height: 28px;
                             letter-spacing: 1%;
                             color: #E0E0E0;
-                            max-width: 407px;
                             margin-bottom: 32px;
                         }
 
